#4 Updated photo height so it no longer gets cut off on the bottom on exceptionally tall photos.

--- a/public/default.css
+++ b/public/default.css
@@ -32,7 +32,7 @@ a{
 }
 
 #focus-picture{
-  max-height: 100%;
+  max-height: 95%;
   display:block;
   margin: auto;
   margin-top: 10px;
@@ -76,17 +76,6 @@ body{
 
 .right{
   right:10px;
-}
-
-#lower-focus{
-  width: 90%;
-  height: 25%;
-  max-height: 200px;
-  display:block;
-  margin: auto;
-  margin-top: 10px;
-  overflow: hidden;
-  padding:0px;
 }
 
 .lower-picture{
